--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
 News
 ====
 
+Pyclewn 1.2
+-----------
+
+.. January 15, 2010
+
+Changes
+^^^^^^^
+
+* Extend the set of available key modifiers in key mappings, to all the key
+  modifiers supported by Vim netbeans (Sergey Khorev).
+
 Pyclewn 1.1
 -----------
 
