--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,16 @@ News
 Pyclewn 1.2
 -----------
 
-.. January 22, 2010
+.. March 6, 2010
+
+New feature
+^^^^^^^^^^^
+
+* Pyclewn may be started from within Vim with the ``:Pyclewn`` Vim command
+  after the ``pyclewn.vim`` script has been run. This requires that Vim
+  allows starting netbeans with the ``:nbstart`` Vim command. The
+  implementation of ``nbstart`` is available as a Mercurial Queue patch. See
+  :ref:`vim-patches-label`.
 
 Changes
 ^^^^^^^
@@ -26,10 +35,10 @@ Pyclewn 1.1
 
 .. January 2, 2010
 
-New features
-^^^^^^^^^^^^
+New feature
+^^^^^^^^^^^
 
-* Support vim running in a terminal, this requires netbeans support in Vim
+* Support Vim running in a terminal. This requires netbeans support in Vim
   when running in a terminal. The implementation of netbeans in ``plain vim``
   (vim running in a terminal), is available as a Mercurial Queues patch for
   the official Vim release and for the latest development source tree.  See
