--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 1.3
 -----------
 
-.. May 19, 2010
+.. May 27, 2010
 
 New feature
 ^^^^^^^^^^^
@@ -12,6 +12,13 @@ New feature
 * A new command named ``setfmtvar`` may be used to set the output format of a
   watched variable or one of its children, for example to ``hexadecimal`` or
   ``binary``.
+
+Bug fix
+^^^^^^^
+
+* Fix incorrect output in console after the first netbeans session. The
+  ``:Pyclewn`` command wipes out now both console and dbgvar buffers when they
+  exist, before starting netbeans.
 
 Pyclewn 1.2
 -----------
