--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 
-2010-05-27  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2010-07-13  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* setup.py: Workaround to a RuntimeError Python 2.7 bug when importing
+	regrtest.
 	* pyclewn.vim: The ':Pyclewn' command wipes out both console and
 	dbgvar buffers when they exist, before starting netbeans.
 	* gdb.py gdbmi.py: Map the new pyclewn command 'setfmtvar' to the
