--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 1.3
 -----------
 
-.. May 27, 2010
+.. July 13, 2010
 
 New feature
 ^^^^^^^^^^^
@@ -16,6 +16,8 @@ New feature
 Bug fix
 ^^^^^^^
 
+* Workaround to a RuntimeError Python bug when installing pyclewn with
+  Python 2.7 (Matt McCormick).
 * Fix incorrect output in console after the first netbeans session. The
   ``:Pyclewn`` command wipes out now both console and dbgvar buffers when they
   exist, before starting netbeans.
