--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 1.3
 -----------
 
-.. July 20, 2010
+.. July 28, 2010
 
 New feature
 ^^^^^^^^^^^
@@ -16,6 +16,8 @@ New feature
 Bug fixes
 ^^^^^^^^^
 
+* Fix handling gdb ASYNC-RECORDs in gdb 7.2 when obtaining the set of
+  available gdb commands and their completion.
 * Fix pyclewn help is not available from within Vim, after installation on
   RedHat 6.
 * The test suite fails with Python 2.7. The ``test`` package is meant for
