--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
-2010-08-21  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2010-08-23  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* vim.py netbeans.py buffer.py: Add a new option to the command line
+	that allows the setting of the background colors for the bp enabled
+	sign, the bp disabled sign and the frame sign.
 	* buffer.py: Show the gdb breakpoint numbers (the last two > digits of
 	them) in the source margin instead of 'bp'.
 
