--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
 News
 ====
 
+Pyclewn 1.6
+-----------
+
+.. January 1, 2011
+
+Bug fixes
+^^^^^^^^^
+
+* Give an explicit error message after installation failure, for example when
+  the environment var EDITOR is set to something different than vim or empty.
+
 Pyclewn 1.5
 -----------
 
