--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 1.6
 -----------
 
-.. March 26, 2011
+.. March 30, 2011
 
 New feature
 ^^^^^^^^^^^
@@ -16,10 +16,12 @@ New feature
 Bug fixes
 ^^^^^^^^^
 
+* Handling of the netbeans socket disconnection, closes the gdb session also
+  when gdb is busy.
 * Ignore 'sigint' or 'quit' command on startup.
 * On gdb abnormal termination, save the project file if exists and forcibly
   terminate the current session.
-* Set breakpoint in a template function.
+* Set breakpoint in a template function C++.
 * Give an explicit error message after installation failure, for example when
   the environment var ``EDITOR`` is set to something different than vim or
   empty.
